--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "yup": "^1.3.2"
